fixed margin left on events spacing

--- a/app/assets/stylesheets/events.scss
+++ b/app/assets/stylesheets/events.scss
@@ -41,7 +41,7 @@ f// Place all the styles related to the Events controller here.
 .events_index button {
   height: 50px;
   width: 300px;
-  margin-left: 11%;
+  margin-left: 13%;
 }
 
 .events_index a:hover {
